--- a/_vignettes/1_intro.Rmd
+++ b/_vignettes/1_intro.Rmd
@@ -22,13 +22,14 @@ knitr::opts_chunk$set(
 ## intro to RBI
 __rbi.fellows@ucdenver.edu__, 
 
-RC1 South room 9101
+RC1 South room9101
 
 [office hours on Thursday afternoons](https://rnabioco.github.io/rbi-project-summary/office-hours.html)
 
 ## outline of the workshop
 * Prereq: check all required packages are installed
 * Day 1 (pm):
+  + Say Hi
   + Intro to scRNAseq
   + Data preprocessing
   + Import into R
@@ -99,7 +100,7 @@ main platforms: 10x vs Smart-seq2 vs sci-RNA-seq3
 ```{r table1, echo=FALSE, message=FALSE, warnings=FALSE, results='asis'}
 tab <- "
 |method        |cell isolation      |coverage       |saturation read # |gene detection  |throughput and cost        |
-|--------------|--------------------|---------------|------------------|----------------|---------------------------|
+|#--------------|#--------------------|#---------------|#------------------|#----------------|#---------------------------|
 |10x Chromium  |droplet-based       |polyA+ 3' only |10^5 per cell     |~2000 per cell  |~5k cells, low cost        |
 |Smart-seq2    |FACS-sorted         |full length    |10^6 per cell     |~4000 per cell  |manual pipetting, high cost|
 |sci-RNA-seq3  |combinatorial index |polyA+ 3' only |10^5 per cell     |~1000 per cell  |~1m cells, lowest cost per |
@@ -110,13 +111,53 @@ cat(tab)
 variations within 10x system: standard 3', 5' + V(D)J, antibody hashing, CITE-seq, variant-calling (very different sample preps, may require up to 4 library preps per sample)
 
 ### 2. alignment pipelines
-[cellranger](https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/installation) (alternatives such as [Alevin](https://salmon.readthedocs.io/en/latest/alevin.html), [STARsolo](https://github.com/alexdobin/STAR/releases), [Kallisto](https://www.kallistobus.tools/))
+[cellranger](https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/installation) performs alignment, filtering, UMI counting, clustering, and gene expression analysis. (alternatives such as [Alevin](https://salmon.readthedocs.io/en/latest/alevin.html), [STARsolo](https://github.com/alexdobin/STAR/releases), [Kallisto](https://www.kallistobus.tools/))
 ```{r, engine = 'bash', eval = FALSE, echo = T}
 # in terminal
-cellranger count --id=123 \
-                 --transcriptome=/refdata-cellranger-GRCh38-3.0.0 \
-                 --fastqs=/home/runs/HAT7ADXX/outs/fastq_path \
-                 --sample=mysample
+cellranger count --id=123 \ 
+                 --transcriptome=/refdata-cellranger-GRCh38-3.0.0 \ 
+                 # build new transcriptome if you have GFP/RFP/transgene
+                 --fastqs=/home/runs/HAT7ADXX/outs/fastq_path \ 
+                 # a list of fastqs, a folder, or pass table via csv file
+                 --sample=mysample 
+                 # will need additional arguments for feature barcoding
+```
+
+output folder structure
+```{r, echo=T, eval = F}
+KO_1_CDNA
+|-- KO_1_CDNA.mri.tgz
+|-- SC_RNA_COUNTER_CS
+|   |-- CLOUPE_PREPROCESS
+|   |-- EXPAND_SAMPLE_DEF
+|   |-- SC_RNA_COUNTER
+|   `-- fork0
+|-- _cmdline
+|-- _filelist
+|-- _finalstate
+|-- _invocation
+|-- _jobmode
+|-- _log
+|-- _mrosource
+|-- _perf
+|-- _sitecheck
+|-- _tags
+|-- _timestamp
+|-- _uuid
+|-- _vdrkill
+|-- _versions
+`-- outs
+    |-- analysis
+    |-- cloupe.cloupe # cloupe file for browser view
+    |-- filtered_feature_bc_matrix # use this fold for seurat
+    |-- filtered_feature_bc_matrix.h5
+    |-- metrics_summary.csv
+    |-- molecule_info.h5
+    |-- possorted_genome_bam.bam
+    |-- possorted_genome_bam.bam.bai
+    |-- raw_feature_bc_matrix # or this for seurat
+    |-- raw_feature_bc_matrix.h5
+    `-- web_summary.html # qc summary
 ```
 ~ 5-8 hours per sample on biochem department cluster "Bodhi"
 
@@ -146,21 +187,21 @@ cellranger output [html](http://cf.10xgenomics.com/samples/cell-exp/3.1.0/5k_pbm
 10. export to a hosted browser, similar to cloupe
 
 ## reading and making UMI-barcode elbow plots
-![model of final 10x library](1_intro_files2/10xV3_seq.png){width=400px}
+![model of final 10x library](1_intro_files2/10xV3_seq.png){width=600px}
 
-The total UMI (unique molecular identifier - represent each transcript) of a cell barcode is used to rank the barcodes determine the UMI threshold for signal vs noise. A plot is generated for cellranger html output, but will also be useful in other situations like bashing and CITE-seq.
+The total UMI (unique molecular identifier - represent each transcript) of a cell barcode is used to rank the barcodes determine the UMI threshold for signal vs noise. A plot is generated for cellranger html output, but will also be useful in other situations like hashing and CITE-seq.
 
 ![example of good and bad data](1_intro_files2/elbowcomp.png){width=400px}
 
-for a standard scRNAseq run:
+for a standard 10x scRNAseq run:
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;expected range of x axis (barcode) : > 10^5 (if using ggplot to visuualize, might want to filter) 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;expected range of x axis (barcode) : ~ 10^5 (if using ggplot to visualize, might want to filter) 
   
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;expected inflection point of x axis (cell number): ~ # of loaded cells / 2
   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;expected range of y axis (UMI_counts) : > 10^4
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;expected range of y axis (UMI_counts) : ~ 10^4
   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;expected inflection point of y axis (cutoff UMI count): >= 1000
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;expected inflection point of y axis (cutoff UMI count): ~ 1000
   
 ```{r, fig.width=3, fig.height=3, echo = T}
 library(tidyverse)
@@ -194,7 +235,7 @@ Seurat also uses some of the grammar, such as `group.by`.
 A large amount of code introduced in this workshop in based on matrix and dataframe manipulation. Therefore some basic understanding of tidyverse/dplyr will be helpful.
 
 Also, "%>%" is used as "pipe", similar to unix `|`.
-```{r}
+```{r, echo = T}
 # we will look at metadata from pbmc_small from Seurat
 library(Seurat)
 library(tidyverse)
